# symengine.rb

./: .travis.yml  CMakeLists.txt  appveyor.yml  symengine.gemspec
cmake/: FindRuby.cmake
ext/symengine/: CMakeLists.txt  extconf.rb  ruby_basic.c  ruby_function.c  ruby_symbol.c
spec/: basic_spec.rb
